--- a/icon/iconfont.css
+++ b/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1594514 */
-  src: url('iconfont.woff2?t=1657592148681') format('woff2'),
-       url('iconfont.woff?t=1657592148681') format('woff'),
-       url('iconfont.ttf?t=1657592148681') format('truetype');
+  src: url('iconfont.woff2?t=1659953845623') format('woff2'),
+       url('iconfont.woff?t=1659953845623') format('woff'),
+       url('iconfont.ttf?t=1659953845623') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconreload:before {
+  content: "\e71c";
+}
+
+.iconrefresh:before {
+  content: "\e71b";
 }
 
 .iconxingzhuangjiehe3:before {
